k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: psynapse
  namespace: psynapse
  labels:
    app: psynapse
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: psynapse
